# STANet

./: main.py  pyproject.toml  requirements.txt  train.md
data/: changedetection_dataset.py  data_config.py
